add_camera_tracking_mode★

--- a/mujocoの使い方整理.ipynb
+++ b/mujocoの使い方整理.ipynb
@@ -1651,9 +1651,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\atusi\\OneDrive\\ドキュメント\\研究関連（修士）\\Github\\sibuya\\mujocoの使い方整理.ipynb セル 41\u001b[0m line \u001b[0;36m1\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/atusi/OneDrive/%E3%83%89%E3%82%AD%E3%83%A5%E3%83%A1%E3%83%B3%E3%83%88/%E7%A0%94%E7%A9%B6%E9%96%A2%E9%80%A3%EF%BC%88%E4%BF%AE%E5%A3%AB%EF%BC%89/Github/sibuya/mujoco%E3%81%AE%E4%BD%BF%E3%81%84%E6%96%B9%E6%95%B4%E7%90%86.ipynb#X55sZmlsZQ%3D%3D?line=193'>194</a>\u001b[0m \u001b[39mwith\u001b[39;00m mujoco\u001b[39m.\u001b[39mviewer\u001b[39m.\u001b[39mlaunch_passive(m, d) \u001b[39mas\u001b[39;00m viewer: \u001b[39m#mujoco描画起動\u001b[39;00m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/atusi/OneDrive/%E3%83%89%E3%82%AD%E3%83%A5%E3%83%A1%E3%83%B3%E3%83%88/%E7%A0%94%E7%A9%B6%E9%96%A2%E9%80%A3%EF%BC%88%E4%BF%AE%E5%A3%AB%EF%BC%89/Github/sibuya/mujoco%E3%81%AE%E4%BD%BF%E3%81%84%E6%96%B9%E6%95%B4%E7%90%86.ipynb#X55sZmlsZQ%3D%3D?line=194'>195</a>\u001b[0m \n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/atusi/OneDrive/%E3%83%89%E3%82%AD%E3%83%A5%E3%83%A1%E3%83%B3%E3%83%88/%E7%A0%94%E7%A9%B6%E9%96%A2%E9%80%A3%EF%BC%88%E4%BF%AE%E5%A3%AB%EF%BC%89/Github/sibuya/mujoco%E3%81%AE%E4%BD%BF%E3%81%84%E6%96%B9%E6%95%B4%E7%90%86.ipynb#X55sZmlsZQ%3D%3D?line=195'>196</a>\u001b[0m     \u001b[39m# mj_stepでシミュレーションを1進める　　　　　　　mj_stepは、物理シミュレーションをステップする前に、方策を評価し制御信号を適用するコードで置き換えることができます。\u001b[39;00m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/atusi/OneDrive/%E3%83%89%E3%82%AD%E3%83%A5%E3%83%A1%E3%83%B3%E3%83%88/%E7%A0%94%E7%A9%B6%E9%96%A2%E9%80%A3%EF%BC%88%E4%BF%AE%E5%A3%AB%EF%BC%89/Github/sibuya/mujoco%E3%81%AE%E4%BD%BF%E3%81%84%E6%96%B9%E6%95%B4%E7%90%86.ipynb#X55sZmlsZQ%3D%3D?line=196'>197</a>\u001b[0m     \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m50000\u001b[39m):\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/atusi/OneDrive/%E3%83%89%E3%82%AD%E3%83%A5%E3%83%A1%E3%83%B3%E3%83%88/%E7%A0%94%E7%A9%B6%E9%96%A2%E9%80%A3%EF%BC%88%E4%BF%AE%E5%A3%AB%EF%BC%89/Github/sibuya/mujoco%E3%81%AE%E4%BD%BF%E3%81%84%E6%96%B9%E6%95%B4%E7%90%86.ipynb#X55sZmlsZQ%3D%3D?line=197'>198</a>\u001b[0m     \u001b[39m#   d.ctrl = 0.001,0.001 #ctrl\u001b[39;00m\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/atusi/OneDrive/%E3%83%89%E3%82%AD%E3%83%A5%E3%83%A1%E3%83%B3%E3%83%88/%E7%A0%94%E7%A9%B6%E9%96%A2%E9%80%A3%EF%BC%88%E4%BF%AE%E5%A3%AB%EF%BC%89/Github/sibuya/mujoco%E3%81%AE%E4%BD%BF%E3%81%84%E6%96%B9%E6%95%B4%E7%90%86.ipynb#X55sZmlsZQ%3D%3D?line=198'>199</a>\u001b[0m       time\u001b[39m.\u001b[39;49msleep(\u001b[39m0.2\u001b[39;49m)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/atusi/OneDrive/%E3%83%89%E3%82%AD%E3%83%A5%E3%83%A1%E3%83%B3%E3%83%88/%E7%A0%94%E7%A9%B6%E9%96%A2%E9%80%A3%EF%BC%88%E4%BF%AE%E5%A3%AB%EF%BC%89/Github/sibuya/mujoco%E3%81%AE%E4%BD%BF%E3%81%84%E6%96%B9%E6%95%B4%E7%90%86.ipynb#X55sZmlsZQ%3D%3D?line=199'>200</a>\u001b[0m       mujoco\u001b[39m.\u001b[39mmj_step(m, d) \u001b[39m#モデルのデータを用意\u001b[39;00m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/atusi/OneDrive/%E3%83%89%E3%82%AD%E3%83%A5%E3%83%A1%E3%83%B3%E3%83%88/%E7%A0%94%E7%A9%B6%E9%96%A2%E9%80%A3%EF%BC%88%E4%BF%AE%E5%A3%AB%EF%BC%89/Github/sibuya/mujoco%E3%81%AE%E4%BD%BF%E3%81%84%E6%96%B9%E6%95%B4%E7%90%86.ipynb#X55sZmlsZQ%3D%3D?line=200'>201</a>\u001b[0m       viewer\u001b[39m.\u001b[39msync() \u001b[39m# mj_stepで進めたシミュレーションを，描画に反映する　　物理状態の変更を反映する\u001b[39;00m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "import mujoco\n",
@@ -1664,63 +1676,185 @@
     "xml = \"\"\"\n",
     "<mujoco>\n",
     "    <default>\n",
-    "        <!-- <joint damping=\".03\" actuatorforcerange=\"-0.5 0.5\"/> -->\n",
-    "        <default class=\"wheel\">\n",
-    "            <geom type=\"cylinder\" size=\".03 .01\" rgba=\".5 .5 1 1\" />\n",
-    "        </default>\n",
+    "        <camera mode=\"track\"/>\n",
     "    </default>\n",
     "\n",
     "    <compiler angle=\"degree\" coordinate=\"local\" inertiafromgeom=\"true\" />\n",
-    "    <option integrator=\"RK4\" timestep=\"0.01\" />\n",
-    "    <asset>\n",
+    "    <option integrator=\"RK4\" timestep=\"0.0001\" />\n",
+    "    <!-- <asset>\n",
     "        <texture builtin=\"gradient\" height=\"100\" rgb1=\"1 1 1\" rgb2=\"0 0 0\" type=\"skybox\" width=\"100\" />\n",
     "        <texture builtin=\"flat\" height=\"1278\" mark=\"cross\" markrgb=\"1 1 1\" name=\"texgeom\"\n",
     "            random=\"0.01\" rgb1=\"0.8 0.6 0.4\" rgb2=\"0.8 0.6 0.4\" type=\"cube\" width=\"127\" />\n",
     "        <texture builtin=\"checker\" height=\"100\" name=\"texplane\" rgb1=\"0 0 0\" rgb2=\"0.8 0.8 0.8\"\n",
-    "            type=\"2d\" width=\"100\" />\n",
+    "            type=\"2d\" width=\"100\"/>\n",
     "        <material name=\"MatPlane\" reflectance=\"0.5\" shininess=\"1\" specular=\"1\" texrepeat=\"60 60\"\n",
-    "            texture=\"texplane\" />\n",
+    "            texture=\"texplane\"/>\n",
     "        <material name=\"geom\" texture=\"texgeom\" texuniform=\"true\" />\n",
+    "    </asset> -->\n",
+    "\n",
+    "    <asset>\n",
+    "    <texture type=\"skybox\" builtin=\"gradient\" rgb1=\"0.3 0.5 0.7\" rgb2=\"0 0 0\" width=\"512\" height=\"3072\"/>\n",
+    "    <texture type=\"2d\" name=\"groundplane\" builtin=\"checker\" mark=\"edge\" rgb1=\"0.2 0.3 0.4\" rgb2=\"0.1 0.2 0.3\"\n",
+    "      markrgb=\"0.8 0.8 0.8\" width=\"300\" height=\"300\"/>\n",
+    "    <material name=\"groundplane\" texture=\"groundplane\" texuniform=\"true\" texrepeat=\"5 5\" reflectance=\"0.2\"/>\n",
     "    </asset>\n",
     "\n",
+    "    \n",
+    "\n",
     "    <worldbody>\n",
-    "        <light cutoff=\"100\" diffuse=\"1 1 1\" dir=\"-0 0 -1.3\" directional=\"true\" exponent=\"1\"\n",
-    "            pos=\"0 0 1.3\" specular=\".1 .1 .1\" />\n",
+    "\n",
     "        <!-- <geom type=\"plane\" size=\"50 50 .01\" rgba=\"0.6 1 0 1\" /> -->\n",
-    "        <geom conaffinity=\"1\" condim=\"3\" material=\"MatPlane\" name=\"floor\" pos=\"0 0 0\" rgba=\"0.8 0.9 0.8 1\" size=\"40 40 40\" type=\"plane\"/>\n",
+    "        <!-- <geom conaffinity=\"1\" condim=\"3\" name=\"floor\" friction=\"0.0 0.0 0.0\" pos=\"0 0 0\" rgba=\"0.8 0.9 0.8 1\" size=\"10 10 10\" type=\"plane\"/> -->\n",
+    "        <geom type=\"plane\" size=\"30 30 .01\" material=\"groundplane\"/>\n",
+    "      <light pos=\"0 0 1.5\" dir=\"0 0 -1\" directional=\"true\"/>\n",
+    "      <!-- <body name=\"camera_body\">\n",
+    "      <camera name=\"camera_name\" mode=\"targetbody\" target=\"torso\" pos=\"0 0 2\" xyaxes=\"1 0 0 0 1 0\" fovy=\"45\" resolution=\"1 1\"/> 空間固定，追従カメラ作成\n",
+    "      \n",
+    "            </body> -->\n",
     "\n",
     "\n",
-    "        <body pos=\"0 0 .08\">\n",
+    "\n",
+    "\n",
+    "        <body pos=\"0 0 1.8e-3\">\n",
     "            <freejoint />\n",
-    "            <geom name=\"red_box\" type=\"cylinder\" size=\".16 .040 \" rgba=\"0.1 0.1 0.1 .5\" pos=\"0 0 0\" />\n",
+    "            <body name=\"torso\" >\n",
+    "            <geom name=\"mein_body1\" type=\"box\" size=\"0.05 0.03 0.0016\" friction=\"0.0 0.0 0.0\" rgba=\"0.05 0.4 0.15 1\" pos=\"0 0 0.001\" />\n",
+    "            <geom name=\"mein_body_chip1\" type=\"box\" size=\"0.00707 0.00707 0.0016\" friction=\"0.0 0.0 0.0\" rgba=\"0.05 0.4 0.15 1\" pos=\"0.04 0.03 0.001\" euler=\"0 0 45\" />\n",
+    "            <geom name=\"mein_body_chip2\" type=\"box\" size=\"0.00707 0.00707 0.0016\" friction=\"0.0 0.0 0.0\" rgba=\"0.05 0.4 0.15 1\" pos=\"0.04 -0.03 0.001\" euler=\"0 0 45\" />\n",
+    "            <geom name=\"mein_body_chip3\" type=\"box\" size=\"0.00707 0.00707 0.0016\" friction=\"0.0 0.0 0.0\" rgba=\"0.05 0.4 0.15 1\" pos=\"-0.04 0.03 0.001\" euler=\"0 0 45\" />\n",
+    "            <geom name=\"mein_body_chip4\" type=\"box\" size=\"0.00707 0.00707 0.0016\" friction=\"0.0 0.0 0.0\" rgba=\"0.05 0.4 0.15 1\" pos=\"-0.04 -0.03 0.001\" euler=\"0 0 45\" />\n",
+    "            <geom name=\"mein_body4\" type=\"box\" size=\"0.013 0.04 0.0016\" friction=\"0.0 0.0 0.0\" rgba=\"0.05 0.4 0.15 1\" pos=\"-0.027 0 0.001\"/>\n",
+    "            <geom name=\"mein_body5\" type=\"box\" size=\"0.013 0.04 0.0016\" friction=\"0.0 0.0 0.0\" rgba=\"0.05 0.4 0.15 1\" pos=\"0.027 0 0.001\"/>\n",
+    "                <site name = \"hit_box\" type = \"box\" size = \"0.02 0.05 0.0016\" pos=\"0.04 0 0.003\" rgba=\".5 .2 0 .3\"/>\n",
+    "                <site name = \"hit_box2\" type = \"box\" size = \"0.02 0.05 0.0016\" pos=\"-0.04 0 0.003\" rgba=\".5 .2 0 .3\"/>\n",
+    "                <camera name=\"camera_name\" mode=\"track\" pos=\"-0.2 0 1\" euler=\"0 -20 -90\" fovy=\"60\"/> トラッキングカメラを装着\n",
+    "            </body>\n",
+    "            \n",
+    "            <site name=\"sensor_left_front\" type=\"box\" size=\"0.003 0.003 0.003\" pos=\"0.031 0.036 0.01\" zaxis=\"1 0 0.01\" rgba=\".5 1 .5 1\"/>\n",
+    "              <!-- zaxisの３つめ　0.1でちょい上向き -->\n",
+    "            <site name=\"sensor_left_side\" type=\"box\" size=\"0.003 0.003 0.003\" pos=\"0.043 0.016 0.01\" zaxis=\"0.25 1 0\" rgba=\".5 1 .5 1\"/>\n",
+    "            <site name=\"sensor_right_front\" type=\"box\" size=\"0.003 0.003 0.003\" pos=\"0.031 -0.036 0.01\" zaxis=\"1 0 0.01\" rgba=\".5 1 .5 1\"/>\n",
+    "            <site name=\"sensor_right_side\" type=\"box\" size=\"0.003 0.003 0.003\" pos=\"0.043 -0.016 0.01\" zaxis=\"0.25 -1 0\" rgba=\".5 1 .5 1\"/>\n",
+    "            <!-- <site name = \"hit_box\" type = \"box\" size = \"0.02 0.05 0.0005\" pos=\"0.04 0 0.002\" rgba=\".5 .2 0 .3\"/>\n",
+    "            <site name = \"hit_box2\" type = \"box\" size = \"0.02 0.05 0.0005\" pos=\"-0.04 0 0.002\" rgba=\".5 .2 0 .3\"/> -->\n",
     "\n",
-    "            <body name=\"left wheel\" pos=\"-0.04 .13 -.02\" zaxis=\"0 1 0\">\n",
-    "                <joint name=\"left wheel joint\" type=\"hinge\" axis=\"0 0 1\" limited=\"false\" />\n",
-    "                <geom type=\"cylinder\" size=\".036 .01\" rgba=\".5 .5 1 1\" />\n",
-    "                <site type=\"box\" rgba=\"1 1 1 1\" size=\".006 .036 .012\" />\n",
+    "            <!-- <body name=\"left wheel\" pos=\"-0.0 0.036 0.0117\" zaxis=\"0 1 0\"> -->\n",
+    "             <body name=\"left wheel\" pos=\"-0.0 0.036 0.0125\" zaxis=\"0 1 0\">\n",
+    "                <joint name=\"left wheel joint\" type=\"hinge\" axis=\"0 0 1\" limited=\"false\" damping='3.6e-6' />\n",
+    "                \n",
+    "                <geom type=\"cylinder\" size=\"0.0135 0.0035\" rgba=\".3 .3 0.3 1\" mass=\"0.512\"/>\n",
+    "                <site type=\"box\" rgba=\"1 1 1 1\" size=\".0006 .0036 .0012\" />\n",
+    "            </body>\n",
+    "            \n",
+    "\n",
+    "\n",
+    "            <body name=\"right wheel\" pos=\"-0.0 -0.036 0.0125\" zaxis=\"0 1 0\">\n",
+    "                <joint name=\"right wheel joint\" type=\"hinge\" axis=\"0 0 1\" limited=\"false\" damping='3.6e-6' />\n",
+    "                <geom type=\"cylinder\" size=\"0.0135 0.0035\" rgba=\".3 .3 0.3 1\" mass=\"0.512\"/>\n",
+    "                <site type=\"box\" rgba=\"1 1 1 1\" size=\".0006 .0036 .0012\" />\n",
     "            </body>\n",
     "\n",
-    "            <body name=\"right wheel\" pos=\"-0.04 -.13 -.02\" zaxis=\"0 1 0\">\n",
-    "                <joint name=\"right wheel joint\" type=\"hinge\" axis=\"0 0 1\" limited=\"false\" />\n",
-    "                <geom type=\"cylinder\" size=\".036 .01\" rgba=\".5 .5 1 1\" />\n",
-    "                <site type=\"box\" rgba=\"1 1 1 1\" size=\".006 .036 .012\" />\n",
+    "            <body name=\"motorbox1\" pos=\"0 -0.018 0.0135\" >\n",
+    "                <geom type=\"box\" size=\"0.01 0.0135 0.01\" rgba=\"0.1 0.1 0.1 1\" />\n",
     "            </body>\n",
     "\n",
-    "            <body name=\"flont_ball\" pos=\".13 0 -.035\">\n",
-    "                <joint type=\"ball\" limited=\"false\" />\n",
-    "                <geom type=\"sphere\" size=\".02\" rgba=\".8 .8 0 1\" />\n",
-    "                <site type=\"box\" rgba=\"1 0 0 1\" size=\".006 .02 .006\" />\n",
+    "            <body name=\"motorbox2\" pos=\"0 0.018 0.0135\">\n",
+    "                <geom type=\"box\" size=\"0.01 0.0135 0.01\" rgba=\"0.1 0.1 0.1 1\" />\n",
     "            </body>\n",
+    "\n",
     "        </body>\n",
+    "    <site type=\"box\" rgba=\"1 0 0 0.2\" fromto=\"0 0 0 2 0 0\" size=\"0.01\"/>\n",
+    "    <site type=\"box\" rgba=\"0 1 0 0.2\" fromto=\"0 0 0 0 2 0\" size=\"0.01\"/>\n",
+    "    <site type=\"box\" rgba=\"0 0 1 0.2\" fromto=\"0 0 0 0 0 2\" size=\"0.01\"/>\n",
+    "\n",
+    "\n",
+    "\n",
+    "        <!-- <body name=\"wall\" pos=\"7 0.0 0\">\n",
+    "                <geom type=\"box\" size=\"0.1 2 0.3\" rgba=\".5 .5 1 1\" />\n",
+    "            </body> -->\n",
+    "\n",
+    "        <body name=\"maze_wall2ss\" pos=\"-0.09 0 0.025\">\n",
+    "                <geom type=\"box\" size=\"0.005 0.18 0.025\" rgba=\".5 .5 1 1\" />\n",
+    "            </body>\n",
+    "<!-- \n",
+    "        <body name=\"side_wall1\" pos=\"0 3 2\">\n",
+    "        <freejoint />\n",
+    "                <geom type=\"box\" size=\"2 0.1 0.3\" rgba=\".5 .5 1 1\" />\n",
+    "            </body> -->\n",
+    "<!-- \n",
+    "        <body name=\"side_wall2\" pos=\"0 -3 2\">\n",
+    "        <freejoint />\n",
+    "                <geom type=\"box\" size=\"2 0.1 0.3\" rgba=\".5 .5 1 1\" />\n",
+    "            </body> -->\n",
+    "<!-- \n",
+    "        <body name=\"maze_init_wall_outline\" pos=\"0 0.09 0.025\">\n",
+    "                <geom type=\"box\" size=\"0.09 0.005 0.025\" rgba=\".5 .5 .3 0.5\" pos=\"0 -0.18 0.0\"/>\n",
+    "          \n",
+    "                <geom type=\"box\" size=\"0.09 0.005 0.025\" rgba=\"1 0 0 1\" pos=\"0.18 0 0\"/>\n",
+    "                <geom type=\"box\" size=\"0.09 0.005 0.025\" rgba=\"1 0 0 1\" pos=\"0.36 0 0\"/>\n",
+    "                <geom type=\"box\" size=\"0.09 0.005 0.025\" rgba=\"1 0 0 1\" pos=\"0.54 0 0\"/>\n",
+    "                <geom type=\"box\" size=\"0.09 0.005 0.025\" rgba=\"1 0 0 1\" pos=\"0.72 0 0\"/>\n",
+    "                <geom type=\"box\" size=\"0.09 0.005 0.025\" rgba=\"1 0 0 1\" pos=\"0.90 0 0\"/>\n",
+    "                <geom type=\"box\" size=\"0.09 0.005 0.025\" rgba=\"1 0 0 1\" pos=\"1.08 0 0\"/>\n",
+    "                <geom type=\"box\" size=\"0.09 0.005 0.025\" rgba=\"1 0 0 1\" pos=\"1.26 0 0\"/>\n",
+    "\n",
+    "                <geom type=\"box\" size=\"0.005 0.09 0.025\" rgba=\"1 0 0 1\" pos=\"0.81 -0.09 0\"/>\n",
+    "                <geom type=\"box\" size=\"0.005 0.09 0.025\" rgba=\"1 0 0 1\" pos=\"0.81 -0.18 0\"/>\n",
+    "                <geom type=\"box\" size=\"0.005 0.09 0.025\" rgba=\"1 0 0 1\" pos=\"0.81 -0.36 0\"/>\n",
+    "                <geom type=\"box\" size=\"0.005 0.09 0.025\" rgba=\"1 0 0 1\" pos=\"0.81 -0.54 0\"/>\n",
+    "                <geom type=\"box\" size=\"0.005 0.18 0.025\" rgba=\"1 0 0 1\" pos=\"0.81 -0.72 0\"/>\n",
+    "\n",
+    "                <geom type=\"box\" size=\"0.09 0.005 0.025\" rgba=\".5 .5 .3 0.5\" />\n",
+    "                <geom type=\"box\" size=\"0.09 0.005 0.025\" rgba=\"1 0 0 0.4\" pos=\"0.0 -0.90 0\"/>\n",
+    "                <geom type=\"box\" size=\"0.09 0.005 0.025\" rgba=\"1 0 0 0.4\" pos=\"0.18 -0.90 0\"/>\n",
+    "                <geom type=\"box\" size=\"0.09 0.005 0.025\" rgba=\"1 0 0 0.4\" pos=\"0.36 -0.90 0\"/>\n",
+    "                <geom type=\"box\" size=\"0.09 0.005 0.025\" rgba=\"1 0 0 0.4\" pos=\"0.54 -0.90 0\"/>\n",
+    "                <geom type=\"box\" size=\"0.09 0.005 0.025\" rgba=\"1 0 0 0.4\" pos=\"0.72 -0.90 0\"/>\n",
+    "\n",
+    "                <geom type=\"box\" size=\"0.005 0.09 0.025\" rgba=\".5 .5 .3 0.5\" pos=\"-0.09 -0.09 0\"/>\n",
+    "                <geom type=\"box\" size=\"0.005 0.09 0.025\" rgba=\"1 0 0 1\" pos=\"-0.09 -0.18 0\"/>\n",
+    "                <geom type=\"box\" size=\"0.005 0.09 0.025\" rgba=\"1 0 0 1\" pos=\"-0.09 -0.36 0\"/>\n",
+    "                <geom type=\"box\" size=\"0.005 0.09 0.025\" rgba=\"1 0 0 1\" pos=\"-0.09 -0.54 0\"/>\n",
+    "                <geom type=\"box\" size=\"0.005 0.18 0.025\" rgba=\"1 0 0 1\" pos=\"-0.09 -0.72 0\"/>\n",
+    "            </body> -->\n",
+    "\n",
+    "\n",
+    "\n",
+    "<!-- かべかべかべｎ --><!-- かべかべかべｎ --><!-- かべかべかべｎ --><!-- かべかべかべｎ --><!-- かべかべかべｎ -->\n",
+    "\n",
+    "        <!-- <body name=\"maze_wall2\" pos=\"1.9 -0.09 0.025\">\n",
+    "                <geom type=\"box\" size=\"8 0.005 0.025\" rgba=\".5 .5 1 1\" />\n",
+    "            </body>\n",
+    "            <body name=\"long_wall2\" pos=\"1.9 0.09 0.025\">\n",
+    "                <geom type=\"box\" size=\"8 0.005 0.025\" rgba=\".5 .5 1 1\" />\n",
+    "            </body> -->\n",
+    "<!-- かべかべかべｎ --><!-- かべかべかべｎ --><!-- かべかべかべｎ --><!-- かべかべかべｎ --><!-- かべかべかべｎ -->\n",
+    "            \n",
+    "\n",
+    "            <!-- <body name=\"goal1\" pos=\"2 0 0.045\">\n",
+    "                <geom name=\"goal\" type=\"sphere\" size=\"0.03\" rgba=\"1 1 0 1\" />\n",
+    "                <site name=\"goal\" type=\"sphere\" size=\"0.1\" rgba=\"0 1 0.2 0.2\" />\n",
+    "            </body> -->\n",
+    "     \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "    </worldbody>\n",
     "    <actuator>\n",
-    "        <motor name=\"right\" joint=\"right wheel joint\" />\n",
-    "        <motor name=\"left\" joint=\"left wheel joint\" />\n",
-    "        <!-- <motor name=\"right\" joint=\"right wheel joint\" ctrllimited=\"true\" ctrlrange=\"-1.0 1.0\" gear=\"2\"/>\n",
-    "        <motor name=\"left\" joint=\"left wheel joint\" ctrllimited=\"true\" ctrlrange=\"-1.0 1.0\" gear=\"2\"/> -->\n",
+    "        <motor name=\"right\" joint=\"right wheel joint\" gear=\"1.8e-3\"/>\n",
+    "        <motor name=\"left\" joint=\"left wheel joint\" gear=\"1.8e-3\"/>\n",
     "    </actuator>\n",
-    "</mujoco>\n",
     "\n",
+    "    <sensor>\n",
+    "        <rangefinder name=\"LF\" site=\"sensor_left_front\" cutoff=\"0.10\"/>\n",
+    "        <rangefinder name=\"LS\" site=\"sensor_left_side\" cutoff=\"0.10\"/>\n",
+    "        <rangefinder name=\"RF\" site=\"sensor_right_front\" cutoff=\"0.10\"/>\n",
+    "        <rangefinder name=\"RS\" site=\"sensor_right_side\" cutoff=\"0.10\"/>\n",
+    "        <touch name = \"HB\" site = \"hit_box\"/>\n",
+    "        <touch name = \"HB2\" site = \"hit_box2\"/>\n",
+    "    </sensor>\n",
+    "</mujoco>\n",
     "\"\"\"\n",
     "\n",
     "m = mujoco.MjModel.from_xml_string(xml) #modelを読み込んで用意\n",
@@ -1730,7 +1864,8 @@
     "\n",
     "    # mj_stepでシミュレーションを1進める　　　　　　　mj_stepは、物理シミュレーションをステップする前に、方策を評価し制御信号を適用するコードで置き換えることができます。\n",
     "    for i in range(50000):\n",
-    "      d.ctrl = 0.001,0.001 #ctrl\n",
+    "    #   d.ctrl = 0.001,0.001 #ctrl\n",
+    "      time.sleep(0.2)\n",
     "      mujoco.mj_step(m, d) #モデルのデータを用意\n",
     "      viewer.sync() # mj_stepで進めたシミュレーションを，描画に反映する　　物理状態の変更を反映する\n",
     "\n",
