--- a/mujocoの使い方整理.ipynb
+++ b/mujocoの使い方整理.ipynb
@@ -1646,23 +1646,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 描画最小構成"
+    "## 描画最小構成(いまはカメラ設定調査中により工事中)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\atusi\\OneDrive\\ドキュメント\\研究関連（修士）\\Github\\sibuya\\mujocoの使い方整理.ipynb セル 41\u001b[0m line \u001b[0;36m1\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/atusi/OneDrive/%E3%83%89%E3%82%AD%E3%83%A5%E3%83%A1%E3%83%B3%E3%83%88/%E7%A0%94%E7%A9%B6%E9%96%A2%E9%80%A3%EF%BC%88%E4%BF%AE%E5%A3%AB%EF%BC%89/Github/sibuya/mujoco%E3%81%AE%E4%BD%BF%E3%81%84%E6%96%B9%E6%95%B4%E7%90%86.ipynb#X55sZmlsZQ%3D%3D?line=193'>194</a>\u001b[0m \u001b[39mwith\u001b[39;00m mujoco\u001b[39m.\u001b[39mviewer\u001b[39m.\u001b[39mlaunch_passive(m, d) \u001b[39mas\u001b[39;00m viewer: \u001b[39m#mujoco描画起動\u001b[39;00m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/atusi/OneDrive/%E3%83%89%E3%82%AD%E3%83%A5%E3%83%A1%E3%83%B3%E3%83%88/%E7%A0%94%E7%A9%B6%E9%96%A2%E9%80%A3%EF%BC%88%E4%BF%AE%E5%A3%AB%EF%BC%89/Github/sibuya/mujoco%E3%81%AE%E4%BD%BF%E3%81%84%E6%96%B9%E6%95%B4%E7%90%86.ipynb#X55sZmlsZQ%3D%3D?line=194'>195</a>\u001b[0m \n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/atusi/OneDrive/%E3%83%89%E3%82%AD%E3%83%A5%E3%83%A1%E3%83%B3%E3%83%88/%E7%A0%94%E7%A9%B6%E9%96%A2%E9%80%A3%EF%BC%88%E4%BF%AE%E5%A3%AB%EF%BC%89/Github/sibuya/mujoco%E3%81%AE%E4%BD%BF%E3%81%84%E6%96%B9%E6%95%B4%E7%90%86.ipynb#X55sZmlsZQ%3D%3D?line=195'>196</a>\u001b[0m     \u001b[39m# mj_stepでシミュレーションを1進める　　　　　　　mj_stepは、物理シミュレーションをステップする前に、方策を評価し制御信号を適用するコードで置き換えることができます。\u001b[39;00m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/atusi/OneDrive/%E3%83%89%E3%82%AD%E3%83%A5%E3%83%A1%E3%83%B3%E3%83%88/%E7%A0%94%E7%A9%B6%E9%96%A2%E9%80%A3%EF%BC%88%E4%BF%AE%E5%A3%AB%EF%BC%89/Github/sibuya/mujoco%E3%81%AE%E4%BD%BF%E3%81%84%E6%96%B9%E6%95%B4%E7%90%86.ipynb#X55sZmlsZQ%3D%3D?line=196'>197</a>\u001b[0m     \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m50000\u001b[39m):\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/atusi/OneDrive/%E3%83%89%E3%82%AD%E3%83%A5%E3%83%A1%E3%83%B3%E3%83%88/%E7%A0%94%E7%A9%B6%E9%96%A2%E9%80%A3%EF%BC%88%E4%BF%AE%E5%A3%AB%EF%BC%89/Github/sibuya/mujoco%E3%81%AE%E4%BD%BF%E3%81%84%E6%96%B9%E6%95%B4%E7%90%86.ipynb#X55sZmlsZQ%3D%3D?line=197'>198</a>\u001b[0m     \u001b[39m#   d.ctrl = 0.001,0.001 #ctrl\u001b[39;00m\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/atusi/OneDrive/%E3%83%89%E3%82%AD%E3%83%A5%E3%83%A1%E3%83%B3%E3%83%88/%E7%A0%94%E7%A9%B6%E9%96%A2%E9%80%A3%EF%BC%88%E4%BF%AE%E5%A3%AB%EF%BC%89/Github/sibuya/mujoco%E3%81%AE%E4%BD%BF%E3%81%84%E6%96%B9%E6%95%B4%E7%90%86.ipynb#X55sZmlsZQ%3D%3D?line=198'>199</a>\u001b[0m       time\u001b[39m.\u001b[39;49msleep(\u001b[39m0.2\u001b[39;49m)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/atusi/OneDrive/%E3%83%89%E3%82%AD%E3%83%A5%E3%83%A1%E3%83%B3%E3%83%88/%E7%A0%94%E7%A9%B6%E9%96%A2%E9%80%A3%EF%BC%88%E4%BF%AE%E5%A3%AB%EF%BC%89/Github/sibuya/mujoco%E3%81%AE%E4%BD%BF%E3%81%84%E6%96%B9%E6%95%B4%E7%90%86.ipynb#X55sZmlsZQ%3D%3D?line=199'>200</a>\u001b[0m       mujoco\u001b[39m.\u001b[39mmj_step(m, d) \u001b[39m#モデルのデータを用意\u001b[39;00m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/atusi/OneDrive/%E3%83%89%E3%82%AD%E3%83%A5%E3%83%A1%E3%83%B3%E3%83%88/%E7%A0%94%E7%A9%B6%E9%96%A2%E9%80%A3%EF%BC%88%E4%BF%AE%E5%A3%AB%EF%BC%89/Github/sibuya/mujoco%E3%81%AE%E4%BD%BF%E3%81%84%E6%96%B9%E6%95%B4%E7%90%86.ipynb#X55sZmlsZQ%3D%3D?line=200'>201</a>\u001b[0m       viewer\u001b[39m.\u001b[39msync() \u001b[39m# mj_stepで進めたシミュレーションを，描画に反映する　　物理状態の変更を反映する\u001b[39;00m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "初期cam_mode: [1]\n"
      ]
     }
    ],
@@ -1859,14 +1855,21 @@
     "\n",
     "m = mujoco.MjModel.from_xml_string(xml) #modelを読み込んで用意\n",
     "d = mujoco.MjData(m) #モデルのデータを用意\n",
+    "print(\"初期cam_mode:\",m.cam_mode)\n",
+    "mujoco.viewer.mujoco.mjtCamLight = 3\n",
     "\n",
     "with mujoco.viewer.launch_passive(m, d) as viewer: #mujoco描画起動\n",
+    "    d.ctrl = 3,3 #ctrl\n",
+    "    mujoco.mj_step(m, d) #シミュレーションを1ステップ進める\n",
+    "    viewer.sync() # mj_stepで進めたシミュレーションを，描画に反映する　　物理状態の変更を反映する\n",
+    "    time.sleep(2)\n",
     "\n",
     "    # mj_stepでシミュレーションを1進める　　　　　　　mj_stepは、物理シミュレーションをステップする前に、方策を評価し制御信号を適用するコードで置き換えることができます。\n",
-    "    for i in range(50000):\n",
-    "    #   d.ctrl = 0.001,0.001 #ctrl\n",
-    "      time.sleep(0.2)\n",
-    "      mujoco.mj_step(m, d) #モデルのデータを用意\n",
+    "    for i in range(500000):\n",
+    "      d.ctrl = 3,3 #ctrl\n",
+    "    #   time.sleep(0.1)\n",
+    "      mujoco.mj_step(m, d) #シミュレーションを1ステップ進める\n",
+    "    #   print(m.cam_mode)\n",
     "      viewer.sync() # mj_stepで進めたシミュレーションを，描画に反映する　　物理状態の変更を反映する\n",
     "\n",
     "\n",
@@ -1878,72 +1881,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "['T',\n",
-       " '__abs__',\n",
+       "['__abs__',\n",
        " '__add__',\n",
        " '__and__',\n",
-       " '__array__',\n",
-       " '__array_finalize__',\n",
-       " '__array_function__',\n",
-       " '__array_interface__',\n",
-       " '__array_prepare__',\n",
-       " '__array_priority__',\n",
-       " '__array_struct__',\n",
-       " '__array_ufunc__',\n",
-       " '__array_wrap__',\n",
        " '__bool__',\n",
+       " '__ceil__',\n",
        " '__class__',\n",
-       " '__class_getitem__',\n",
-       " '__complex__',\n",
-       " '__contains__',\n",
-       " '__copy__',\n",
-       " '__deepcopy__',\n",
        " '__delattr__',\n",
-       " '__delitem__',\n",
        " '__dir__',\n",
        " '__divmod__',\n",
-       " '__dlpack__',\n",
-       " '__dlpack_device__',\n",
        " '__doc__',\n",
        " '__eq__',\n",
        " '__float__',\n",
+       " '__floor__',\n",
        " '__floordiv__',\n",
        " '__format__',\n",
        " '__ge__',\n",
        " '__getattribute__',\n",
-       " '__getitem__',\n",
+       " '__getnewargs__',\n",
        " '__gt__',\n",
        " '__hash__',\n",
-       " '__iadd__',\n",
-       " '__iand__',\n",
-       " '__ifloordiv__',\n",
-       " '__ilshift__',\n",
-       " '__imatmul__',\n",
-       " '__imod__',\n",
-       " '__imul__',\n",
        " '__index__',\n",
        " '__init__',\n",
        " '__init_subclass__',\n",
        " '__int__',\n",
        " '__invert__',\n",
-       " '__ior__',\n",
-       " '__ipow__',\n",
-       " '__irshift__',\n",
-       " '__isub__',\n",
-       " '__iter__',\n",
-       " '__itruediv__',\n",
-       " '__ixor__',\n",
        " '__le__',\n",
-       " '__len__',\n",
        " '__lshift__',\n",
        " '__lt__',\n",
-       " '__matmul__',\n",
        " '__mod__',\n",
        " '__mul__',\n",
        " '__ne__',\n",
@@ -1960,10 +1938,10 @@
        " '__repr__',\n",
        " '__rfloordiv__',\n",
        " '__rlshift__',\n",
-       " '__rmatmul__',\n",
        " '__rmod__',\n",
        " '__rmul__',\n",
        " '__ror__',\n",
+       " '__round__',\n",
        " '__rpow__',\n",
        " '__rrshift__',\n",
        " '__rshift__',\n",
@@ -1971,93 +1949,33 @@
        " '__rtruediv__',\n",
        " '__rxor__',\n",
        " '__setattr__',\n",
-       " '__setitem__',\n",
-       " '__setstate__',\n",
        " '__sizeof__',\n",
        " '__str__',\n",
        " '__sub__',\n",
        " '__subclasshook__',\n",
        " '__truediv__',\n",
+       " '__trunc__',\n",
        " '__xor__',\n",
-       " 'all',\n",
-       " 'any',\n",
-       " 'argmax',\n",
-       " 'argmin',\n",
-       " 'argpartition',\n",
-       " 'argsort',\n",
-       " 'astype',\n",
-       " 'base',\n",
-       " 'byteswap',\n",
-       " 'choose',\n",
-       " 'clip',\n",
-       " 'compress',\n",
-       " 'conj',\n",
+       " 'as_integer_ratio',\n",
+       " 'bit_length',\n",
        " 'conjugate',\n",
-       " 'copy',\n",
-       " 'ctypes',\n",
-       " 'cumprod',\n",
-       " 'cumsum',\n",
-       " 'data',\n",
-       " 'diagonal',\n",
-       " 'dot',\n",
-       " 'dtype',\n",
-       " 'dump',\n",
-       " 'dumps',\n",
-       " 'fill',\n",
-       " 'flags',\n",
-       " 'flat',\n",
-       " 'flatten',\n",
-       " 'getfield',\n",
+       " 'denominator',\n",
+       " 'from_bytes',\n",
        " 'imag',\n",
-       " 'item',\n",
-       " 'itemset',\n",
-       " 'itemsize',\n",
-       " 'max',\n",
-       " 'mean',\n",
-       " 'min',\n",
-       " 'nbytes',\n",
-       " 'ndim',\n",
-       " 'newbyteorder',\n",
-       " 'nonzero',\n",
-       " 'partition',\n",
-       " 'prod',\n",
-       " 'ptp',\n",
-       " 'put',\n",
-       " 'ravel',\n",
+       " 'numerator',\n",
        " 'real',\n",
-       " 'repeat',\n",
-       " 'reshape',\n",
-       " 'resize',\n",
-       " 'round',\n",
-       " 'searchsorted',\n",
-       " 'setfield',\n",
-       " 'setflags',\n",
-       " 'shape',\n",
-       " 'size',\n",
-       " 'sort',\n",
-       " 'squeeze',\n",
-       " 'std',\n",
-       " 'strides',\n",
-       " 'sum',\n",
-       " 'swapaxes',\n",
-       " 'take',\n",
-       " 'tobytes',\n",
-       " 'tofile',\n",
-       " 'tolist',\n",
-       " 'tostring',\n",
-       " 'trace',\n",
-       " 'transpose',\n",
-       " 'var',\n",
-       " 'view']"
+       " 'to_bytes']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dir(m.cam_pos)"
+    "print(m.cam_mode)\n",
+    "# print(mujoco.viewer.mujoco.mjtCamLight.mjCAMLIGHT_TRACK)\n",
+    "dir(mujoco.mjtCamLight)"
    ]
   },
   {
@@ -3289,6 +3207,13 @@
     "class coreEnv:\n",
     "    def __init__(self):\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 番外編"
    ]
   },
   {
