--- a/whisper_test2.ipynb
+++ b/whisper_test2.ipynb
@@ -679,6 +679,48 @@
     "# srtファイルの翻訳と出力\n",
     "translate_srt_and_write(input_srt_file, output_srt_file)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "目標座標は：x= 1000 , y= 0 です\n",
+      "目標座標は：x= 1000 , y= 1000 です\n",
+      "目標座標は：x= 0 , y= 1000 です\n",
+      "目標座標は：x= 0 , y= 0 です\n"
+     ]
+    }
+   ],
+   "source": [
+    "waypoint = [[1000,0],[1000,1000],[0,1000],[0,0]]\n",
+    "for wayp_xnum in range(len(waypoint)):\n",
+    "    print(\"目標座標は：x=\",waypoint[wayp_xnum][0],\", y=\",waypoint[wayp_xnum][1], \"です\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(waypoint[0])"
+   ]
   }
  ],
  "metadata": {
