--- a/latex/hpp_cpp_imi.tex
+++ b/latex/hpp_cpp_imi.tex
@@ -33,6 +33,9 @@
   \item 大勢で開発するときに，それぞれ分担作業できるから便利
 \end{itemize}
 
+\section{モデル化}
+モーターのコイルの，インダクタンスは，すぐに意味をなさなくなるので無視できる
+慣性モーメントかける角加速度と，プロペラが風を切るときの抵抗トルクが釣り合うときが，定常状態．
 
 
 \end{document}
