--- a/latex/2gatu15_progress.tex
+++ b/latex/2gatu15_progress.tex
@@ -18,14 +18,31 @@
 \author{渋谷享史}
 \date{\today}
 \maketitle
-% 画像挿入
-\begin{figure}[htbp]
-  \vspace{5mm}
-  \center
-  \includegraphics[width=100mm]{images/20240208.jpg}
-  \caption{ブロック図}
-  \label{block}
-  \vspace{5mm}
-\end{figure}
+% % 画像挿入
+% \begin{figure}[htbp]
+%   \vspace{5mm}
+%   \center
+%   \includegraphics[width=100mm]{images/20240208.jpg}
+%   \caption{ブロック図}
+%   \label{block}
+%   \vspace{5mm}
+% \end{figure}
+
+\section{進捗}
+\subsection{今回の進捗}
+\begin{itemize}
+  \item マウスのエンコーダからPI制御で左手法をするプログラムを実装した．
+  \item 左手法プログラムをの行動を，関数化した
+  \item gymのインターフェースについて調べ，MuJoCoの強化学習環境を作成した．
+\end{itemize}
+
+先週作成した，エンコーダの微小変化量から速度を推定してマウスの
+
+\subsection{今後の予定}
+\begin{itemize}
+  \item 学習のさせ方（報酬設計，どのアルゴリズムを使うか）を決める
+  \item プロポーザルを完成させるために，論文の問を考える
+  \item 
+\end{itemize}
 
 \end{document}
