✨ xmlを改善，3×3mapに最適化，オドメトリを状態に追加

--- a/latex/2gatu15_progress.tex
+++ b/latex/2gatu15_progress.tex
@@ -27,22 +27,20 @@
 %   \label{block}
 %   \vspace{5mm}
 % \end{figure}
-
 \section{進捗}
 \subsection{今回の進捗}
 \begin{itemize}
-  \item マウスのエンコーダからPI制御で左手法をするプログラムを実装した．
-  \item 左手法プログラムをの行動を，関数化した
+  \item マウスのエンコーダからPI制御で左手法をするプログラムを製作した．
+  \item 左手法プログラムの行動を，関数化した
   \item gymのインターフェースについて調べ，MuJoCoの強化学習環境を作成した．
+  \item Stable-baseline3を試し，学習を回せることを確認した．
 \end{itemize}
-
-先週作成した，エンコーダの微小変化量から速度を推定してマウスの
-
 \subsection{今後の予定}
 \begin{itemize}
   \item 学習のさせ方（報酬設計，どのアルゴリズムを使うか）を決める
   \item プロポーザルを完成させるために，論文の問を考える
-  \item 
+  \item オドメトリ値などを状態に含めて学習を行う
 \end{itemize}
+マウスから取得できる状態をすべて取得できるように
 
 \end{document}
