--- a/gym/my_gymnasium.ipynb
+++ b/gym/my_gymnasium.ipynb
@@ -825,7 +825,7 @@
     "\n",
     "env = gym.make(\"MouseEnv-v0\",  render_mode=\"human\")\n",
     "env.model.opt.timestep = 0.01  # タイムステップを設定\n",
-    "model = PPO(\"MlpPolicy\", env, verbose=1)\n",
+    "model = SAC(\"MlpPolicy\", env, verbose=1)\n",
     "# model = PPO.load('test',env)\n",
     "# render_freq = 1000  # 1000ステップごとにレンダリング\n",
     "# callback = CustomCallback(render_freq)\n",
