--- a/latex/2gatu15_progress.tex
+++ b/latex/2gatu15_progress.tex
@@ -11,7 +11,6 @@
 \captionsetup[figure]{labelformat=simple, labelsep=space, textfont=normalfont, labelfont=bf}
 \renewcommand{\figurename}{Fig.}
 
-
 \begin{document}
 
 \title{進捗報告}
@@ -41,6 +40,9 @@
   \item プロポーザルを完成させるために，論文の問を考える
   \item オドメトリ値などを状態に含めて学習を行う
 \end{itemize}
-マウスから取得できる状態をすべて取得できるように
+マウスから取得できる状態をすべて取得できるようにしたので，学習を試してみます．\\
+同時に，２輪移動ロボットのプロポーザルを完成させるために，論文を読んで問いを考えます．
+
+
 
 \end{document}
