--- a/gym/テスト本番用整理した.ipynb
+++ b/gym/テスト本番用整理した.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\atusi\\anaconda3\\envs\\gymenv\\Lib\\site-packages\\gymnasium\\core.py:311: UserWarning: \u001b[33mWARN: env.model to get variables from other wrappers is deprecated and will be removed in v1.0, to get this variable you can do `env.unwrapped.model` for environment variables or `env.get_wrapper_attr('model')` that will search the reminding wrappers.\u001b[0m\n",
+      "  logger.warn(\n",
+      "c:\\Users\\atusi\\anaconda3\\envs\\gymenv\\Lib\\site-packages\\gymnasium\\core.py:311: UserWarning: \u001b[33mWARN: env.data to get variables from other wrappers is deprecated and will be removed in v1.0, to get this variable you can do `env.unwrapped.data` for environment variables or `env.get_wrapper_attr('data')` that will search the reminding wrappers.\u001b[0m\n",
+      "  logger.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "__credits__ = [\"Kallinteris-Andreas\"]\n",
     "\n",
@@ -519,10 +530,10 @@
     "  return odm_right, odm_left\n",
     "\n",
     "def random_friction(model, data):\n",
-    "    if random.random() > 0.9:\n",
+    "    if random.random() > 0.97:\n",
     "        model.geom_friction[:] = 1\n",
     "    else:\n",
-    "        model.geom_friction[:] = random.uniform(0.2, 0.6)\n",
+    "        model.geom_friction[:] = random.uniform(0.14, 0.21)\n",
     "    # print(\"摩擦係数\", model.geom_friction)\n",
     "    mujoco.mj_forward(model, data)#mujocoのキャッシュを更新するための処理\n",
     "\n",
@@ -907,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1017,9 +1028,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "最初の１マス進む処理\n",
+      "-2.6179938779914944 ＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃\n",
+      "0 ＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃\n",
+      "2.6179938779914944 ＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃\n",
+      "目標速度： 0.15 ＃＃＃＃＃＃＃＃\n",
+      "目標速度： 0 ＃＃＃＃＃＃＃＃\n",
+      "目標速度： -0.15 ＃＃＃＃＃＃＃＃\n",
+      "目標速度： 0.15 ＃＃＃＃＃＃＃＃\n",
+      "目標速度： 0 ＃＃＃＃＃＃＃＃\n",
+      "目標速度： -0.15 ＃＃＃＃＃＃＃＃\n",
+      "2.6179938779914944 ＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃\n",
+      "0 ＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃\n",
+      "-2.6179938779914944 ＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃\n",
+      "目標速度： 0.15 ＃＃＃＃＃＃＃＃\n",
+      "目標速度： 0 ＃＃＃＃＃＃＃＃\n",
+      "目標速度： -0.15 ＃＃＃＃＃＃＃＃\n",
+      "調整入りました\n",
+      "目標速度： 0.15 ＃＃＃＃＃＃＃＃\n",
+      "目標速度： 0 ＃＃＃＃＃＃＃＃\n",
+      "目標速度： -0.15 ＃＃＃＃＃＃＃＃\n",
+      "調整入りました\n",
+      "-2.6179938779914944 ＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃\n",
+      "0 ＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃\n",
+      "2.6179938779914944 ＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃\n",
+      "目標速度： 0.15 ＃＃＃＃＃＃＃＃\n",
+      "目標速度： 0 ＃＃＃＃＃＃＃＃\n",
+      "目標速度： -0.15 ＃＃＃＃＃＃＃＃\n",
+      "調整入りました\n",
+      "目標速度： 0.15 ＃＃＃＃＃＃＃＃\n",
+      "目標速度： 0 ＃＃＃＃＃＃＃＃\n",
+      "目標速度： -0.15 ＃＃＃＃＃＃＃＃\n",
+      "調整入りました\n",
+      "2.6179938779914944 ＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃\n"
+     ]
+    }
+   ],
    "source": [
     "#Main Loop\n",
     "with mujoco.viewer.launch_passive(model, data, key_callback=key_callback) as viewer: #キーイベントが発生すると、登録されたコールバック関数であるkey_callbackが自動的に呼び出され、キーコードやその他のイベント情報が引数keycodeとして渡されます。\n",
