神無しでmigiとhidariを作成したとき用コミット

--- a/gym/グラフ出す用に改造_テスト本番用整理した.ipynb
+++ b/gym/グラフ出す用に改造_テスト本番用整理した.ipynb
@@ -582,7 +582,7 @@
     "    else:\n",
     "        model.geom_friction[:] = random.uniform(0.14, 0.21) #0.14, 0.21\n",
     "    # print(\"摩擦係数\", model.geom_friction)\n",
-    "    mujoco.mj_forward(model, data)#mujocoのキャッシュを更新するための処理 iranai\n",
+    "    mujoco.mj_forward(model, data)#mujocoのキャッシュを更新するための処理 iranai?\n",
     "\n",
     "\n",
     "def get_pulse_count(pre_odm_right, pre_odm_left, odm_right, odm_left): #回転量をパルスにする エンコーダの役割をする関数\n",
