--- a/latex/ロボメック指針.tex
+++ b/latex/ロボメック指針.tex
@@ -78,43 +78,48 @@
   \item 前進：前方に壁がない場合，0.18[m]前進
   \item 左旋回：左側に壁がない場合，0.09[m]前進，90[度]左旋回，0.09[m]前進
   \item 右旋回：右側に壁がない場合，0.09[m]前進，90[度]右旋回，0.09[m]前進
-  \item 袋小路：前方，左右に壁がある場合，180度旋回
+  \item 袋小路：前方，左右ともに壁がある場合，180度旋回
 \end{itemize}
 となっている．基本的にはこれらの動作は，目標速度値を追従するような速度を出すことによって
-台形加減速を行うことで実現されている．しかし，この方法のみでは移動ごとに誤差を含んでしまう．
+台形加減速を行うことで実現されている．しかし，この方法のみでは移動ごとに誤差を含んでしまう場合がある．
 そのためこれらに加え，以下のような位置補正処理が行われている．
 \begin{itemize}
-  \item 直進区間：左右のセンサの値の差からマスの中心からのズレを計算し，戻るよう補正
-  \item 旋回区間：前方のセンサの値の差から向いている方向のズレを計算し，差が小さくなるように向きを変えることで補正
+  \item 補正１（前進移動中）：左右のセンサの値の差から，マスの中心ラインと機体のズレを計算し，戻るよう補正．
+  \item 補正２（前進移動中）：前方のセンサの値から，壁に0.09[mm]以上近づいたらそれ以上は進まないようにする．
+  \item 補正３（前進移動後）：前方のセンサの値の差から，機体の向いている方向のズレを計算し，ズレが小さくなるようにその場で向きを整えることで補正．
 \end{itemize}
+この補正を加えることで，走行結果にある程度のズレが生じた場合も，それを補正することができるようになっている．しかし，このような補正を加えても補正しきれない場合があった．
 
 \subsection{強化学習による制御手法}
 次に，強化学習による制御手法について述べる．
 強化学習は，以下のような環境で学習を行った．壁がランダムに出現する環境で，左90度旋回動作と，右90度旋回動作を学習させた．
-状態空間にはマイクロマウスに取り付けられたセンサの値と，車輪のモータに取り付けられたエンコーダからオドメトリによって推定される値を用いた．
-これにより，考えうる壁の状態をすべて踏まえた上での，センサの値を用いて90度旋回を経験から行う制御を獲得させた．
+状態空間は以下の表に示す．マイクロマウスに取り付けられたセンサの値と，車輪のモータに取り付けられたエンコーダからオドメトリによって推定される値を用いた．
+次元数は12である．
+(表を入れる)
+行動空間は，ロボットに搭載された左右の２つの車輪を回すモータへの制御入力とし，次元数は２である．
+これにより，考えうる壁の状態をすべて踏まえた上での，センサの値を用いて90度旋回を経験から行う方策の獲得を目指した．
 
 （図を入れたりして説明をわかりやすくする）
 \subsection{実験方法}
 これらの制御によって，同じコースを走行させ，その到達距離を比較することで，提案手法の有用性を評価する．
 具体的には，図のようなコースを走行させる．また，この地面は基本的には摩擦係数が
-十分タイヤが滑らない値となるよう設定されているが，１０％の確率でタイヤがスリップしてしまう摩擦係数に変化する．
+十分タイヤが滑らない値となるよう設定されているが，一定の確率でタイヤがスリップしてしまう摩擦係数に変化する．
+
 このような設定によって，現実世界でのタイヤの滑りを再現した．
-この，一定確率でタイヤのスリップが生じてしまうフィールドで2種類の制御によってロボットを走行させ，スリップという外乱からの
+この，一定確率でタイヤのスリップが生じてしまうコースで2種類の制御によってロボットを走行させ，スリップという外乱からの
 安定性を比較することで，提案手法の有用性を評価する．各制御を100回ずつ走行させ，到達距離の平均値を比較する．
-
-
+従来手法の制御である程度補正をかけられていたが，対応しきれなかった場合があるものに対して本手法を用いて置き換えた制御で改善できることを示し，提案手法の有用性を示す．
 \section{結果・考察}
 同じフィールドを2種類の制御を用いて100回ずつ走行させた際の到達距離を表すグラフを以下に示す．
 
 
-グラフより，（提案手法による制御の方が，従来の制御よりもスリップによる影響を受けにくいことがわかる．）
+グラフより，（提案手法による制御の方が，ぶつからずに走行できている距離が長いことがわかる．よって，安定して走行できていることがわかる．このことから，従来の制御よりもスリップによる影響を受けにくいことがわかる．）
 また，その制御のパラメータを変更して実験を行った場合を以下に示す．
 
 これにより，値が違っても本手法は有用であることがわかる．
 \section{結言}
 本研究では，従来の制御の問題を解決する一つのアプローチとして，強化学習によって得た制御を部分的に置き換える手法を提案した．
-マイクロマウス協議会のフィールドを使用し，従来の制御と強化学習によって得られた制御を比較することで，提案手法の有用性を示した．
+マイクロマウス協議会のフィールドを使用し，従来の制御と，強化学習によって得られた制御に置き換えた制御を比較することで，提案手法である「一部を強化学習で置き換えることで従来の制御の改善を行う」の有用性を示した．
 今後は，他の問題に対してもこの手法を適用し，その有用性を示すことができるかを検証する必要がある．
 
 
