--- a/gym/神なし最終学習環境_テスト.ipynb
+++ b/gym/神なし最終学習環境_テスト.ipynb
@@ -81,7 +81,7 @@
     "            \"render_fps\": int(np.round(1.0 / self.dt)),\n",
     "        }\n",
     "\n",
-    "        obs_size = 10 #self.data.qpos.size + self.data.qvel.size #たとえば，観測空間に位置と速度を入れたいのであれば，サイズを指定したいので，サイズを取る\n",
+    "        obs_size = 9 #self.data.qpos.size + self.data.qvel.size #たとえば，観測空間に位置と速度を入れたいのであれば，サイズを指定したいので，サイズを取る\n",
     "        # self.wall_hit = 0\n",
     "        #マイクロマウスのパラメータ用変数\n",
     "        self.reward_graph = []\n",
@@ -161,12 +161,14 @@
     "        wall_hit = 0\n",
     "        course_out = 0\n",
     "        goal = 0\n",
+    "        \n",
     "        velocity_before = self.data.sensor(\"Veloci\").data[0] # 前の速度を取る\n",
     "        ####オドメトリ####\n",
     "        self.past_time = self.data.time\n",
     "        # エンコーダを読み取る\n",
     "        pre_odm_right, pre_odm_left = self.get_odom(self.model, self.data)\n",
-    "        before_ang = self.quaternion_to_euler_numpy(self.data.qpos[3:7])\n",
+    "        # before_ang = self.quaternion_to_euler_numpy(self.data.qpos[3:7]) #角度を取得　この場合理論値\n",
+    "        before_ang = self.mouse_angle_rad #1step前の角度\n",
     "        self.random_friction(self.model, self.data)\n",
     "        self.do_simulation(action, self.frame_skip)####################シミュレーション実行##############################\n",
     "        self.stepcount += 1\n",
@@ -188,14 +190,15 @@
     "        # self.mouse_ypos_graph.append(self.mouse_ypos)\n",
     "        ####オドメトリ####\n",
     "\n",
-    "        after_ang = self.quaternion_to_euler_numpy(self.data.qpos[3:7])\n",
+    "        # after_ang = self.quaternion_to_euler_numpy(self.data.qpos[3:7]) #角度を取得　この場合理論値\n",
+    "        after_ang = self.mouse_angle_rad #1step後の角度\n",
     "        # print(\"after_ang\", after_ang, type(after_ang), \"before_ang\", before_ang,  type(before_ang))\n",
-    "        self.angsum_obs += after_ang[2] - before_ang[2] #これが，角度の変化量\n",
+    "        self.angsum_obs += (after_ang - before_ang)*180/math.pi #これが，角度の変化量 オドメトリ値を元に計算\n",
     "        # print(\"angsum_obs\", self.angsum_obs)\n",
     "        target_ang = 90\n",
     "        # ang_reward = 1/(target_ang - self.angsum_obs + 1) #ang_errorが0に近づくほど大きくなる．しかし値は０～１の範囲を取りうる\n",
-    "        ang_reward2 = self.quaternion_to_euler_numpy(self.data.qpos[3:7])\n",
-    "        ang_reward = 1/(abs(target_ang - ang_reward2[2]) + 1) #ang_errorが0に近づくほど大きくなる．しかし値は０～１の範囲を取りうる\n",
+    "        # ang_reward2 = self.quaternion_to_euler_numpy(self.data.qpos[3:7])\n",
+    "        ang_reward = 1/(abs(target_ang - self.angsum_obs) + 1) #ang_errorが0に近づくほど大きくなる．しかし値は０～１の範囲を取りうる\n",
     "        \n",
     "\n",
     "        velocity_after = self.data.sensor(\"Veloci\").data[0] # 今の速度を取る\n",
@@ -229,11 +232,11 @@
     "            course_out = -1\n",
     "            # print(\"course_out\")\n",
     "            terminated = True\n",
-    "        if mouse_Ypos < 0.25 or mouse_Ypos > 0.29:\n",
+    "        if mouse_Ypos < 0.23 or mouse_Ypos > 0.31:\n",
     "            course_out = -1\n",
     "            # print(\"course_out\")\n",
     "            terminated = True\n",
-    "        if mouse_Xpos < 0.25 or mouse_Xpos > 0.29:\n",
+    "        if mouse_Xpos < 0.23 or mouse_Xpos > 0.31:\n",
     "            course_out = -1\n",
     "            # print(\"course_out\")\n",
     "            terminated = True\n",
@@ -263,7 +266,7 @@
     "\n",
     "        observation = self._get_obs(self.angsum_obs)\n",
     "        \n",
-    "        reward = ang_reward #-0* np.sum(np.square(action)) #self.wall_hitにしないほうが見通しが良い気がする\n",
+    "        reward = 2*ang_reward -0.01* np.sum(np.square(action)) #self.wall_hitにしないほうが見通しが良い気がする\n",
     "        # print(\"wall_hit:\",wall_hit , \"course_out:\", course_out, \"range_reward:\", range_reward, \"ang_reward:\", ang_reward)\n",
     "        # self.reward_graph.append(reward)\n",
     "        self.epi_reward_count += reward#＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃\n",
@@ -319,7 +322,7 @@
     "\n",
     "\n",
     "    def _get_obs(self, angsum_obs): #状態空間を取得\n",
-    "        # angsum_obs = np.array([angsum_obs])\n",
+    "        angsum_obs = np.array([angsum_obs])\n",
     "        # wheel_left_ang = np.array([self.data.actuator('left').velocity[0]]) #左タイヤの回転角度\n",
     "        # wheel_right_ang = np.array([self.data.actuator('right').velocity[0]]) #右タイヤの回転角度\n",
     "        # angle_obs = np.array([self.quaternion_to_euler_numpy(self.data.qpos[3:7])]) #マウスの角度\n",
@@ -344,14 +347,14 @@
     "        # mouse_vel = np.array([self.mouse_vel])\n",
     "        # return np.concatenate((position, mouse_xpos, mouse_ypos, mouse_vel, mouse_angle_rad, lf, ls, rs, rf, gyro_0,gyro_1,gyro_2, accelerometer_0, accelerometer_1, accelerometer_2)) #mouse_angle_rad, mouse_xpos, mouse_ypos, gyro)) #npの値を連結して返す．これが状態空間となる\n",
     "        # print(\"angle_obs[0][2]\", [angle_obs[0][2]])       [angle_obs[0][2]] ,\n",
-    "        return np.concatenate(( lf, ls, rs, rf, gyro_0,gyro_1,gyro_2, accelerometer_0, accelerometer_1, accelerometer_2)) #mouse_angle_rad, mouse_xpos, mouse_ypos, gyro)) #npの値を連結して返す．これが状態空間となる\n",
+    "        return np.concatenate((angsum_obs, lf, ls, rs, rf, gyro_2, accelerometer_0, accelerometer_1, accelerometer_2)) #mouse_angle_rad, mouse_xpos, mouse_ypos, gyro)) #npの値を連結して返す．これが状態空間となる\n",
     "    def reset_model(self):\n",
     "        qpos = self.init_qpos\n",
     "        # print(\"qpos\", qpos)\n",
     "        qvel = self.init_qvel\n",
-    "        self.stepcount_graph.append(self.stepcount)\n",
+    "        # self.stepcount_graph.append(self.stepcount)\n",
     "        self.stepcount = 0\n",
-    "        self.epi_reward_graph.append(self.epi_reward_count)\n",
+    "        # self.epi_reward_graph.append(self.epi_reward_count)\n",
     "        self.epi_reward_count = 0\n",
     "\n",
     "        leftwall_on = np.random.uniform(0, 1)\n",
@@ -649,7 +652,7 @@
     "    #         # print(obs)\n",
     "    #         obs, _ = env.reset() # エピソードが終了したら、環境をリセット\n",
     "    #モデルの保存 (1)\n",
-    "    # model.save('nogod')\n",
+    "    model.save('migi')\n",
     "    # model.save('hidarimawari_housyuu_godsight_onlyxy_notight')\n",
     "    end_time = datetime.datetime.now().replace(microsecond=0)\n",
     "    total_time = end_time - start_time\n",
