角速度PID制御をして，その様子をプロットするプログラム

--- a/gym/神なし最終学習環境_テスト.ipynb
+++ b/gym/神なし最終学習環境_テスト.ipynb
@@ -266,7 +266,7 @@
     "\n",
     "        observation = self._get_obs(self.angsum_obs)\n",
     "        \n",
-    "        reward = 2*ang_reward -0.01* np.sum(np.square(action)) #self.wall_hitにしないほうが見通しが良い気がする\n",
+    "        reward = 2*ang_reward -0.3* np.sum(np.square(action)) #self.wall_hitにしないほうが見通しが良い気がする\n",
     "        # print(\"wall_hit:\",wall_hit , \"course_out:\", course_out, \"range_reward:\", range_reward, \"ang_reward:\", ang_reward)\n",
     "        # self.reward_graph.append(reward)\n",
     "        self.epi_reward_count += reward#＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃\n",
@@ -621,12 +621,12 @@
     "# env = RecordVideo(env, video_path, video_length=500)\n",
     "env.model.opt.timestep = 0.01  # タイムステップを設定 RecordVideoする場合はそれ以降に書かないとerrorが出る\n",
     "\n",
-    "# model = PPO(\"MlpPolicy\", env, verbose=0)\n",
-    "model = PPO.load('hidari_0305',env)\n",
+    "model = PPO(\"MlpPolicy\", env, verbose=0)\n",
+    "# model = PPO.load('hidariSAC_0305',env)\n",
     "# render_freq = 1000  # 1000ステップごとにレンダリング\n",
     "# callback = CustomCallback(render_freq)\n",
     "for i in range(199999999900):\n",
-    "    model.learn(total_timesteps=30000)#progress_bar = True, callback=callback)\n",
+    "    model.learn(total_timesteps=1000)#progress_bar = True, callback=callback)\n",
     "\n",
     "    # # モデルのテスト\n",
     "    # obs, _ = env.reset()  # ここを修正\n",
@@ -650,7 +650,7 @@
     "    #         # print(obs)\n",
     "    #         obs, _ = env.reset() # エピソードが終了したら、環境をリセット\n",
     "    #モデルの保存 (1)\n",
-    "    model.save('hidari_0305')\n",
+    "    model.save('dammy')\n",
     "    # model.save('hidarimawari_housyuu_godsight_onlyxy_notight')\n",
     "    end_time = datetime.datetime.now().replace(microsecond=0)\n",
     "    total_time = end_time - start_time\n",
